<resources>
    <string name="app_name">RSS notifier</string>
    <string name="title_feed_list">My RSS feeds</string>
    <string name="title_new_feed">Add new RSS feed</string>
    <string name="title_edit_feed">Edit RSS feed</string>
    <string name="title_view_feed">View RSS feed</string>
    <string name="button_save_feed">Save</string>
    <string name="button_edit_feed">Edit</string>
    <string name="feed_date_default">no saved feed</string>
    <string name="input_title">e.g.: My RSS Feed</string>
    <string name="header_title">Feed title:</string>
    <string name="input_url">e.g.: http://lorem-rss.herokuapp.com/feed</string>
    <string name="header_url">Feed URL:</string>
    <string name="input_notification">e.g.: New notification!</string>
    <string name="header_notification">Notification title:</string>
    <string name="toggle_notifications">Notifications</string>
</resources>
