<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite">

    <LinearLayout
        android:id="@+id/feed_title_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">
        <TextView
            android:id="@+id/header_feed_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:textSize="18sp"
            android:text="@string/header_title"
            />

        <EditText
            android:id="@+id/input_feed_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:hint="@string/input_title"
            android:inputType="textMultiLine"
            android:maxLength="50"
            />

        <TextView
            android:id="@+id/read_feed_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:layout_marginBottom="9dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:textSize="22sp"
            android:textStyle="bold"
            android:visibility="gone"
            />

    </LinearLayout>
    <LinearLayout
        android:id="@+id/feed_url_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/feed_title_form">
        <TextView
            android:id="@+id/header_feed_url"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginTop="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:textSize="18sp"
            android:text="@string/header_url"
            />

        <EditText
            android:id="@+id/input_feed_url"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/input_url"
            android:inputType="textMultiLine|textUri"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            />

        <TextView
            android:id="@+id/read_feed_url"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:layout_marginBottom="9dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:textSize="22sp"
            android:textStyle="bold"
            android:visibility="gone"
            />

    </LinearLayout>
    <LinearLayout
        android:id="@+id/notification_title_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/feed_url_form">
        <TextView
            android:id="@+id/header_notification_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:textSize="18sp"
            android:text="@string/header_notification"
            />

        <EditText
            android:id="@+id/input_notification_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:hint="@string/input_notification"
            android:inputType="textMultiLine"
            android:maxLength="50"

            />

        <TextView
            android:id="@+id/read_notification_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:layout_marginBottom="9dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:textSize="22sp"
            android:textStyle="bold"
            android:visibility="gone"
            />

    </LinearLayout>

    <Button
        android:id="@+id/save_or_edit_button"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/rounded_corner_button"
        android:textColor="@color/colorWhite"
        android:onClick="addOrUpdateFeed"
        android:text="@string/button_save_feed"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/notification_title_form" />

    <Switch
        android:id="@+id/notification_switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="true"
        android:text="@string/toggle_notifications"
        android:showText="false"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/notification_title_form"
        android:textSize="18sp"
        android:theme="@style/SwitchButton"
        />


    <be.appfoundry.progressbutton.ProgressButton
        android:id="@+id/progress_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:visibility="invisible"
        />

</android.support.constraint.ConstraintLayout>